tests/int/use_command/snapshots/integration__int__use_command__depth__modules_glob_patterns_depth_e_d_2.snap
---
source: tests/int/use_command/depth.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - glob_patterns
    - "-e"
    - "-d"
    - "2"
---
success: true
exit_code: 0
----- stdout -----
crate::dir_module
crate::dir_module::child_file
crate::file_module
crate::file_module::greet
crate::file_module::nesting_depth
crate::glob_patterns::constants::*
crate::glob_patterns::mixed_exports
crate::glob_patterns::outer::*
crate::glob_patterns::self_ref::*
crate::glob_patterns::set_a::*
crate::glob_patterns::set_b::*
crate::glob_patterns::traits::*
crate::glob_patterns::types::*
crate::glob_patterns::utilities::*

----- stderr -----
