tests/int/use_command/snapshots/integration__int__use_command__depth__modules_glob_showcase_depth_d_2.snap
---
source: tests/int/use_command/depth.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/modules
    - use
    - glob_showcase
    - "-d"
    - "2"
---
success: true
exit_code: 0
----- stdout -----
crate::file_module::*
crate::inline_modules::*
crate::nesting::level1

----- stderr -----
