tests/int/use_command/snapshots/integration__int__use_command__depth__modules_glob_showcase_depth_r_e_d_1.snap
---
source: tests/int/use_command/depth.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - glob_showcase
    - "-r"
    - "-e"
    - "-d"
    - "1"
---
success: true
exit_code: 0
----- stdout -----
crate::file_module::*
crate::glob_showcase
crate::inline_modules::*
crate::nesting

----- stderr -----
