tests/int/use_command/snapshots/integration__int__use_command__depth__modules_glob_showcase_depth_r_e_d_2.snap
---
source: tests/int/use_command/depth.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - glob_showcase
    - "-r"
    - "-e"
    - "-d"
    - "2"
---
success: true
exit_code: 0
----- stdout -----
crate::file_module::*
crate::glob_showcase::ErrorKind
crate::glob_showcase::Status
crate::glob_showcase::api
crate::glob_showcase::config
crate::glob_showcase::database
crate::glob_showcase::errors
crate::glob_showcase::models
crate::glob_showcase::traits
crate::glob_showcase::utils
crate::inline_modules::*
crate::nesting::level1

----- stderr -----
